--- a/src/App.css
+++ b/src/App.css
@@ -31,13 +31,25 @@
   height: 100%;
 }
 
+.aboutme-grid {
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  text-align: center;
+  left: 0;
+  top: 0;
+  height: 100%
+
+}
+
 .avatar-img {
   height:200px;
   padding-top: 5em;
 }
 
 .banner-text {
-  background-color: black;
+  background-color: #489ac1;
   opacity: .5;
   width: 75%;
   margin: Auto;
