fun with background

--- a/src/App.css
+++ b/src/App.css
@@ -33,13 +33,15 @@
 
 .aboutme-grid {
   background: #232526;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #414345, #83c1ff);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #acf9cf); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   text-align: center;
-  left: 0;
+  position: fixed;
   top: 0;
-  height: 100%
+  left: 0;
+  width: 100%;
+  height: 100%;
 
 }
 
