--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@
   background: linear-gradient(to right, #414345, #acf9cf); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   text-align: center;
-  position: fixed;
-  top: 0;
+  position: absolute;
+  top: 3.5em;
   left: 0;
   width: 100%;
   height: 100%;
