--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
 
 }
 
+
 .tabs {
   background: linear-gradient(to bottom, #414345, #414345);
 }
@@ -214,6 +215,20 @@
   text-transform: lowercase;
   font-weight: 300;
   letter-spacing: 10px;
+}
+
+.resume-grid {
+  background: #232526;  /* fallback for old browsers */
+  /*background: -webkit-linear-gradient(to right, #414345, #ff396e);  !* Chrome 10-25, Safari 5.1-6 *!*/
+  background: linear-gradient(to bottom, #414345, #57899c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  text-align: center;
+  position: absolute;
+  top: 0em;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
 }
 
 .namer-input.cheeky input {
